--- a/Pipfile
+++ b/Pipfile
@@ -8,13 +8,13 @@ verify_ssl = true
 tentaclio-s3 = {editable = true,path = "."}
 pytest = "*"
 pytest-cov = "*"
-
+pytest-mock = "*"
 black = "*"
 flake8 = "*"
 isort = "*"
 mypy = "*"
-
 twine = "*"
+moto = "*"
 
 [packages]
 
