--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -93,7 +93,8 @@ jobs:
   release:
     executor: standard
     steps:
-      - checkout
+      - checkout_source
+      - update_virtualenv
       - restore_cache:
           keys:
             - pip-cache-{{ .Environment.CACHE_VERSION }}-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
@@ -143,3 +144,4 @@ workflows:
               only: /[0-9]+(\.[0-9]+)*(-alpha\.[0-9]+)?/
             branches:
               ignore: /.*/
+          context: TENTACLIO
