Update deps and version

--- a/Pipfile
+++ b/Pipfile
@@ -11,7 +11,7 @@ pytest-cov = "*"
 pytest-mock = "*"
 black = "*"
 flake8 = "*"
-isort = "*"
+isort = ">=5.11.2"
 mypy = "*"
 twine = "*"
 moto = "*"
@@ -22,4 +22,4 @@ moto = "*"
 python_version = "3.9"
 
 [pipenv]
-allow_prereleases = true
+allow_prereleases = false
